dinoco_docs/src/content/v0.0.1/pt-br/orm/first-steps.mdx
export const title = "Primeiros passos";

# Primeiros passos

Para começar a usar a Dinoco, você deve instalar nossa CLI para que possa manipular migrations e demais sistemas!

```bash
cargo install dinoco-cli
```

Para criarmos o ambiente dinoco, executamos o comando a seguir:

```bash
dinoco init
```

Após escolher o banco de dados e todas as configurações necessárias, será criada a pasta dinoco na raiz de seu projeto.

Essa pasta conterá:

- **Migrations:** O histórico de alterações do seu banco de dados.
- **Schema:** A definição central da sua estrutura de dados.
- **Models:** As representações tipadas para uso em seu código Rust.

## Como funciona?

### 1. Defina seu schema e sua conexão

O Dinoco Schema defina o conteudo de seus models e configurações do banco de dados.

```dinoco
config {
	database = "postgresql"
	database_url = env("DATABASE_URL")
}

model User {
	id    Integer     @id @default(autoincrement())
	email String  @unique
	name  String?

	posts Post[]
}

model Post {
	id        Integer     @id @default(autoincrement())
	title     String
	published Boolean @default(false)

	author    User?   @relation(fields: [authorId], references: [id])
	authorId  Integer?
}
```

### 2. Crie a migração

Ao gerar a migração com o --apply, será aplicado ao banco de dados e será gerado os models automaticamente!

```bash
dinoco migrate generate --apply
```

### 3. Consulta com DinocoClient

```rust
use dinoco::{DinocoClientConfig, DinocoQueryLogger, DinocoQueryLoggerOptions, Extend, find_many, insert_into};

#[path = "../dinoco/mod.rs"]
mod database;

use database::models::*;

#[derive(Debug, Clone, Extend)]
#[extend(User)]
struct UserWithRelation {
    id: i64,
    email: String,
    posts: Vec<PostSimple>,
}

#[derive(Debug, Clone, Extend)]
#[extend(Post)]
struct PostSimple {
    title: String,
    published: bool,
}

#[tokio::main]
async fn main() -> dinoco::DinocoResult<()> {
    let _ = dotenvy::dotenv();

    let config = DinocoClientConfig::default()
        .with_snowflake_node_id(7)
        .with_query_logger(DinocoQueryLogger::stdout(DinocoQueryLoggerOptions::verbose()));

    let client = database::create_connection(config).await?;

    // Insira um usuário com um post relacionado.
    insert_into::<User>()
        .values(User { id: 0, email: "bia@dinoco.rs".to_string(), name: Some("Bia".to_string()) })
        .with_relation(Post { id: 0, title: "Meu primeiro post".to_string(), published: true, authorId: None })
        .execute(&client)
        .await?;

    // Busque todos os usuários com suas postagens.
    let users = find_many::<User>().select::<UserWithRelation>().includes(|x| x.posts()).execute(&client).await?;

    println!("{users:#?}");

    // resultado:
    // [
    // 	UserWithRelation {
    // 		email: "bia@dinoco.rs",
    // 		posts: [
    // 			Post {
    // 				title: "Meu primeiro post",
    // 				published: true,
    // 			},
    // 		],
    // 	},
    // ]

    Ok(())
}
```

## Próximos passos

- [**Dinoco schema**](/v0.0.1/orm/introduction-dinoco): Entenda melhor a estrutura e a proposta do Dinoco.
- [**Dinoco client**](/v0.0.1/orm/first-steps): Revise este fluxo completo do client.

